<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mission</name>
  <version>1.0.1</version>
  <description>""</description>
  <maintainer email="mandominguez97@gmail.com">Manuel Domínguez Montero</maintainer>
  <license>private</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>offboard_control</depend>
  <depend>cv_bridge</depend>
  <depend>ultralytics</depend>
  <depend>opencv-python</depend>
  <depend>numpy</depend>
  <depend>planning</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
