<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mission_tf</name>
  <version>1.0.1</version>
  <description>""</description>
  <maintainer email="mandominguez97@gmail.com">Manuel Domínguez Montero</maintainer>
  <license>private</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>numpy</depend>
  <depend>px4_msgs</depend>
  <depend>gz-transport13</depend>
  <depend>gz-msgs10</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
